# lng-ml-research

./: README.md  pyproject.toml
data/processed/: ais_observations.csv  loitering_candidates.csv  sts_candidates.csv  vessel_zone_events.csv  zone_congestion.csv
data/raw/: lng_tracker_dataset.json  sts_candidates.jsonl  vessel_zone_events.jsonl
notebooks/: exploration.ipynb
src/: main.py
src/lng_ml_research/: __init__.py  ais_pipeline.py  models.py  processor.py  sts.py
